# EMO

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  diagnose_optc.py  pyproject.toml
.claude/: settings.local.json
.claude/commands/: add-eval-shot-variant.md  address-pr-comments.md  test-eval.md
.github/workflows/: docker.yml  main.yml  pr_checks.yml
docs/source/: index.rst
eval_plots/: compare_mmlu_groupings.py  figure_token_cluster_comparison.py  get_table_scores_prune_evals.py  get_table_scores_prune_evals_0314.py  get_table_scores_prune_evals_0318.py  get_table_scores_prune_evals_0319.py  get_table_scores_prune_evals_0319_ckpt0.py  plot_presentation_0305.py  plot_presentation_0318.py  plot_presentation_0319.py  plot_primary_scores.py  plot_primary_scores_new.py  plot_primary_scores_new_arc_easy.py  plot_primary_scores_new_cs294final.py  plot_primary_scores_new_full.py  plot_random_expert_primary_scores.py  plot_scores_prune_evals.py  temp_plot_0330.py  temp_plot_0408.py  temp_script.py
eval_plots/prune_eval_tables/: acc_per_byte.csv  bits_per_byte.csv  exact_match.csv  f1.csv  primary_score.csv  recall.csv  softloss_corr.csv
models/: clear_space.sh
scripts/: RUN_TEMPLATES.md  convert_emo_to_hf.py  convert_olmo_to_hf.sh  hf_finetune_with_pruning.sh  launch_beaker_eval.sh  launch_common.sh  publish_reports.sh  pull_claude_outputs.sh  push_claude_outputs.sh  temp.py  tokenize.sh
scripts/akshitab/: download_mose_code_mix.sh  download_router_evals.sh  generate_router_dashboard.py  generate_router_report.py  get_mix_size.sh
scripts/akshitab/vllm_plugin/: flex_olmo_noqknorm_prenorm_plugin.py  flex_olmo_noqknorm_prenorm_shared_plugin.py  pyproject.toml
scripts/analysis/: README.md  assign_hellaswag_clusters.py  push_router_clustering.sh  run_expert_coverage.sh  run_extract_embeddings.sh  run_extract_embeddings_hellaswag.sh  run_extract_embeddings_mmlu.sh  run_extract_embeddings_shuffled.sh  run_extract_embeddings_shuffled_token.sh  run_extract_embeddings_shuffled_token_truncated.sh  run_sweep_all.sh  run_sweep_focused.sh  run_sweep_focused_token.sh  run_sweep_focused_token_v2.sh  run_sweep_focused_v2.sh  run_sweep_focused_v3.sh  run_transform_and_cluster.sh  split_hellaswag_train_val.py
scripts/clustering/: README.md  cluster.sh  extract_hellaswag.sh  extract_mmlu.sh  extract_pretraining.sh  generate_pretraining_mix.sh  pull.sh  run_pretraining_compare.sh  run_two_model_sweeps.sh  run_weborganizer_compare.sh  sweep.sh  transform.sh  visualize.sh
scripts/extensions/: launch_eval.sh  twolevelbatchlbreducedp512sharedexp1randpool-8-128eval32_1b14b_lr-4e-3_lb-1e-1_1T_0313_anneal_from_step238419_ct-m8_lb0.sh  twolevelbatchlbreducedp512sharedexp1randpool-8-128eval32_1b14b_lr-4e-3_lb-1e-1_1T_0313_anneal_from_step238_ct-m8-128_fs.sh  twolevelbatchlbreducedp512sharedexp1randpool-8-128eval32_1b14b_lr-4e-3_lb-1e-1_1T_0313_anneal_from_step23_ct-m8_lb0_frz.sh
scripts/kevinf/: monitor_beaker.sh
scripts/models/: dense_1b_130b.sh  dense_1b_olmoe-mix_1119(depricated).sh  dense_1b_olmoe-mix_prenorm_noqknorm_1123.sh  emo_1b14b_130b.sh  emo_1b14b_1t.sh  emo_1b14b_1t_emoanneal.sh  moe_1b14b_128experts_lb-1_1213_replicate_oldscoreslogits.sh  moe_1b14b_128experts_lb-1e-1_1213_replicate_oldscoreslogits.sh  moe_1b14b_128experts_lb-1e-1_1217.sh  moe_1b14b_128experts_olmoe-mix_130B_prenorm_1121.sh  moe_1b14b_128experts_olmoe-mix_130B_prenorm_noqknorm_1123.sh  moe_1b35b_320experts_1214.sh  moe_1b35b_320experts_lb-10_1212.sh  moe_1b35b_320experts_lb-1_1215.sh  moe_1b35b_320experts_lb-1e-1_1214.sh  moe_1b35b_320experts_lb-1e-1_zloss-1e-4_1212.sh  moe_1b4b_32experts_1224.sh  moe_1b7b_dclm-upweight(depricated).sh  moe_1b7b_olmoe-mix(depricated).sh  mutualinfo_1b14b_ablations_1230.sh  mutualinfo_1b14b_cond-1e-1_uncond-1e-2_1221.sh  mutualinfo_1b14b_cond-1e-2_uncond-1e-2_1205.sh  mutualinfo_1b14b_cond-1e-2_uncond-1e-2_reorderednorm_qknorm_1205.sh  mutualinfo_1b14b_cond-1e-2_uncond-1e-2_zloss-1e-3_1205.sh  mutualinfo_1b14b_cond-1e-2_uncond-5e-2_1205.sh  stdmoe_1b14b_130b.sh  stdmoe_1b14b_1t.sh  stdmoe_1b14b_1t_emoanneal.sh  stdmoe_1b14b_1t_stdanneal.sh  stdmoe_1b4b_130b.sh  twolevel_1b7b_128experts_olmoe-mix_130B_1110(depricated).sh  twolevelbatchlb-128_1b35b_320experts_lb-1e-1_1219.sh  twolevelbatchlb-128_1b35b_320experts_lb-1e-1_poolsched-lineardecay2000_1217.sh  twolevelbatchlb-16_1b14b_stability_1126.sh  twolevelbatchlb-32_1b14b_stability_filter-true_zlossweight-1e-3_1115.sh  twolevelbatchlb-32_1b14b_stability_lr-6e-4_1203.sh  twolevelbatchlb-32_1b14b_stability_lr-8e-4_1207.sh  twolevelbatchlb-32_1b14b_stability_prenorm_1120.sh  twolevelbatchlb-32_1b14b_stability_prenorm_noqknorm_1121.sh  twolevelbatchlb-32_1b35b_320experts_lb-1_1216.sh  (+22 more)
scripts/models_0116/: moe_1b14b_lr-ablations_0116.sh  moe_1b4b_lr-4e-3_0204.sh  moelbreducedp_sharedexp_1b14b_lr-4e-3_lb-1e-1_0308.sh  moelbreducedp_sharedexp_1b14b_lr-4e-3_lb-1e-1_1T_0322.sh  twolevelbatchlb-32_1b14b_ablations_0116.sh  twolevelbatchlb-32_1b14b_lr-4e-3_lb-1e-1_0119.sh  twolevelbatchlb-32_1b14b_lr-4e-3_lb-1e-2_0118.sh  twolevelbatchlb-32_1b14b_lr-4e-4_lb-1e-1_0118.sh  twolevelbatchlb-32_1b14b_lr-4e-4_lb-1e-1_poosched_0119.sh  twolevelbatchlbreducedp-32_1b14b_lr-4e-3_lb-1e-1_0207.sh  twolevelbatchlbreducedp-32_1b14b_lr-4e-3_lb-1e-2_0207.sh  twolevelbatchlbreducedpsharedexp-32_1b14b_lr-4e-3_lb-1e-1_0211.sh  twolevelbatchlbreducedpsharedexp-32_1b14b_lr-4e-3_lb-1e-2_0213.sh  twolevelbatchlbreducedpsharedexp1randpool-8-128_1b14b_lr-4e-3_lb-1e-1_1T_0313.sh  twolevelbatchlbreducedpsharedexp2randpool-8-128_1b14b_lr-4e-3_lb-1e-1_0305.sh  twolevelbatchlbreducedpsharedexp4c1-32_1b14b_lr-4e-3_lb-1e-1_0214.sh  twolevelbatchlbreducedpsharedexp4c2-32_1b14b_lr-4e-3_lb-1e-2_0215.sh  twolevelbatchlbreducedpsharedexpdensefirst-32_1b14b_lr-4e-3_lb-1e-1_0227.sh  twolevelbatchlbreducedpsharedexprandpool-8-128_1b14b_lr-4e-3_lb-1e-1_0301.sh
scripts/models_fullextend/: README.md  add_expert_all.sh  build_report.py  (+28 more)
src/vllm_plugin/: emo_noqknorm_prenorm_plugin.py  emo_plugin.py  flex_olmo_noqknorm_prenorm_plugin.py  pyproject.toml
(+1297 files in other folders)
