[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai2-olmo-core"
dynamic = ["version"]
readme = "README.md"
description = "Core training module for the Open Language Model (OLMo)"
authors = [
    { name = "Allen Institute for Artificial Intelligence", email = "olmo@allenai.org" },
]
requires-python = ">=3.10,<3.13"
license = { file = "LICENSE" }
dependencies = [
    "numpy",
    "torch==2.8.0",
    "cached-path>=1.7.2",
    "requests",
    "packaging",
    "rich",
    "omegaconf",
    "torchvision==0.23.0",
    "safetensors",
    "importlib_resources",
    "bettermap",
]

[project.urls]
Homepage = "https://github.com/allenai/OLMo-core"
Documentation = "https://olmo-core.readthedocs.io/en/latest/"
Changelog = "https://github.com/allenai/OLMo-core/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "black>=23.1,<24.0",
    "boto3",
    "build",
    "furo==2024.8.6",
    "google-cloud-storage",
    "isort>=5.12,<5.14",
    "mypy>=1.0,<1.4",
    "myst-parser>=1.0,<3.0",
    "pytest",
    "pytest-memray",
    "pytest-sphinx",
    "pytest-xdist",
    "ruff",
    "setuptools",
    "Sphinx>=6.0,<=8.1.3",
    "sphinx-autobuild",
    "sphinx-autodoc-typehints==1.23.3",
    "sphinx-copybutton",
    "sphinx-inline-tabs",
    "twine>=1.11.0",
    "wheel",
]
beaker = ["beaker-py>=1.37.0,<2.0", "GitPython>=3.0,<4.0", "google-cloud-compute"]
comet = ["comet_ml"]
eval = [
    "ai2-olmes@git+https://github.com/allenai/olmes@8e2743734066b073c5d8498d1b8220f67a21a2d6",
    "beaker-gantry",
    "ai2-olmo-eval @ git+https://github.com/allenai/OLMo-in-loop-evals@kevinf/add-legalbench",
    "fsspec>=2024.2.0,<=2025.3.0",
    "s3fs>=2024.2.0,<=2025.3.0",
    "prettytable",
]
torchao = ["torchao"]
transformers = [
    "transformers@git+https://github.com/ryanyxw/transformers.git@32d46178310cca37c0c901045ac9c52973d9f8fb"
]
flash-attn = [
    "flash-attn @ https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.7.2/flash_attn-2.8.3+cu128torch2.8-cp310-cp310-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl ; python_version == '3.10'",
    "flash-attn @ https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.7.2/flash_attn-2.8.3+cu128torch2.8-cp311-cp311-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl ; python_version == '3.11'",
]
wandb = ["wandb"]
all = ["ai2-olmo-core[dev,beaker,comet,eval,flash-attn,torchao,transformers,wandb]"]


[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
olmo_core = ["py.typed", "*.txt"]

[tool.setuptools.dynamic]
version = { attr = "olmo_core.version.VERSION" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["olmo_core*"]
exclude = []

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
(
      __pycache__
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | \bdist\b
    | \bdoc\b
    | scratch/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["F403", "F405", "E501"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".venv",
    "venv",
    ".mypy_cache",
    "__pycache__",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "doc",
    "pretrain_data",
    "inference",
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]

[tool.pyright]
reportPrivateImportUsage = false

[tool.ty.rules]
possibly-unbound-attribute = "ignore"
possibly-unbound-import = "ignore"

[tool.mypy]
ignore_missing_imports = true
no_site_packages = true
check_untyped_defs = true
namespace_packages = false
disable_error_code = "has-type"

[[tool.mypy.overrides]]
module = "tests.*"
strict_optional = false

[tool.pytest.ini_options]
testpaths = "src/test/"
python_classes = ["Test*", "*Test"]
log_format = "%(asctime)s - %(levelname)s - %(name)s - %(message)s"
log_level = "DEBUG"
log_cli = false
log_cli_level = "DEBUG"
markers = ["gpu"]
filterwarnings = [
    'ignore::FutureWarning:huggingface_hub\.file_download',
    'ignore::DeprecationWarning:pkg_resources',
    'ignore::DeprecationWarning:google\.rpc',
    'ignore::FutureWarning:torch\.distributed\.checkpoint\.default_planner',
    'ignore::UserWarning:torch\.distributed\.checkpoint\.state_dict_saver',
    'ignore::UserWarning:torch\.distributed\.checkpoint\.state_dict_loader',
]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu128"]
index-strategy = "unsafe-best-match"
# Override ai2-olmes' hard pin on fsspec==2023.5.0 (it's a self-described hack in olmes
# and works fine with newer versions). Needed for huggingface_hub's maxdepth support.
override-dependencies = [
    "fsspec>=2024.2.0,<=2025.3.0",
    "s3fs>=2024.2.0,<=2025.3.0",
]                                                  
