[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai2-olmo-core"
dynamic = ["version"]
readme = "README.md"
description = "Core training module for the Open Language Model (OLMo)"
authors = [
    { name = "Allen Institute for Artificial Intelligence", email = "olmo@allenai.org" },
]
requires-python = ">=3.10,<3.13"
license = { file = "LICENSE" }
dependencies = [
    "numpy",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "cached-path>=1.7.2",
    "requests",
    "packaging",
    "rich",
    "omegaconf",
    "torchvision==0.23.0",
    "safetensors",
    "importlib_resources",
    "bettermap",
]

[project.urls]
Homepage = "https://github.com/allenai/OLMo-core"
Documentation = "https://olmo-core.readthedocs.io/en/latest/"
Changelog = "https://github.com/allenai/OLMo-core/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "black>=23.1,<24.0",
    "boto3",
    "build",
    "furo==2024.8.6",
    "google-cloud-storage",
    "isort>=5.12,<5.14",
    "mypy>=1.0,<1.4",
    "myst-parser>=1.0,<3.0",
    "pytest",
    "pytest-memray",
    "pytest-sphinx",
    "pytest-xdist",
    "ruff",
    "setuptools==80.10.2",
    "Sphinx>=6.0,<=8.1.3",
    "sphinx-autobuild",
    "sphinx-autodoc-typehints==1.23.3",
    "sphinx-copybutton",
    "sphinx-inline-tabs",
    "twine>=1.11.0",
    "wheel",
]
beaker = ["beaker-py>=2.5.5", "GitPython>=3.0,<4.0", "google-cloud-compute"]
comet = ["comet_ml"]
eval = [
    "ai2-olmes@git+https://github.com/allenai/olmes@721d796d00db4c2044a89ef9e1f81463e06f3090", # "ai2-olmes@git+https://github.com/allenai/olmes@162158ed7878a5d107f5c7e5ad1cebed2a95a26d",
    "beaker-gantry",
    "ai2-olmo-eval @ git+https://github.com/allenai/OLMo-in-loop-evals@kevinf/add-legalbench",
    "pytrec-eval-terrier",
    "setuptools==80.10.2",
    "prettytable",
    "s3fs",
    "litellm!=1.82.7,!=1.82.8", # For LLM judges (1.82.7 and 1.82.8 were compromised),
    "huggingface-hub>=0.34.0,<1.0"
]
torchao = ["torchao"]
transformers = ["transformers==4.57.1"]
#transformers=[
#    "transformers@git+https://github.com/ryanyxw/transformers.git@de05b34309baf1c1110a3371031767edba81a317"
#]
flash-attn = [
    "flash-attn @ https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.7.2/flash_attn-2.8.3+cu128torch2.8-cp310-cp310-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl ; python_version == '3.10'",
    "flash-attn @ https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.7.2/flash_attn-2.8.3+cu128torch2.8-cp311-cp311-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl ; python_version == '3.11'",
]
#transformers=[
#    "transformers@git+https://github.com/ryanyxw/transformers.git@2a441500fddbaedeb7f22651114825358be6b296"
#]
wandb = ["wandb"]
# vLLM plugin registering FlexOlmoNoQKNormPrenormForCausalLM as a native vLLM model.
# Plugin lives under scripts/akshitab/vllm_plugin/ (path resolved via [tool.uv.sources]).
# Pulls in vllm itself; pin it tightly if you need a specific version compatible with
# the cluster's torch build (currently torch==2.8.0+cu128).
# Install with: pip install -e '.[vllm-plugin]'.
vllm-plugin = ["vllm>=0.10.0", "flexmoe-vllm-plugin"]
all = ["ai2-olmo-core[dev,beaker,comet,eval,flash-attn,torchao,transformers,vllm-plugin,wandb]"]


[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
olmo_core = ["py.typed", "*.txt"]

[tool.setuptools.dynamic]
version = { attr = "olmo_core.version.VERSION" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["olmo_core*"]
exclude = []

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
(
      __pycache__
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | \bdist\b
    | \bdoc\b
    | scratch/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["F403", "F405", "E501"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".venv",
    "venv",
    ".mypy_cache",
    "__pycache__",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "doc",
    "pretrain_data",
    "inference",
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]

[tool.pyright]
reportPrivateImportUsage = false

[tool.ty.rules]
possibly-unbound-attribute = "ignore"
possibly-unbound-import = "ignore"

[tool.mypy]
ignore_missing_imports = true
no_site_packages = true
check_untyped_defs = true
namespace_packages = false
disable_error_code = "has-type"

[[tool.mypy.overrides]]
module = "tests.*"
strict_optional = false

[tool.pytest.ini_options]
testpaths = "src/test/"
python_classes = ["Test*", "*Test"]
log_format = "%(asctime)s - %(levelname)s - %(name)s - %(message)s"
log_level = "DEBUG"
log_cli = false
log_cli_level = "DEBUG"
markers = ["gpu"]
filterwarnings = [
    'ignore::FutureWarning:huggingface_hub\.file_download',
    'ignore::DeprecationWarning:pkg_resources',
    'ignore::DeprecationWarning:google\.rpc',
    'ignore::FutureWarning:torch\.distributed\.checkpoint\.default_planner',
    'ignore::UserWarning:torch\.distributed\.checkpoint\.state_dict_saver',
    'ignore::UserWarning:torch\.distributed\.checkpoint\.state_dict_loader',
]

[tool.uv.sources]
flexmoe-vllm-plugin = { path = "scripts/akshitab/vllm_plugin", editable = true }

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu128"]
index-strategy = "unsafe-best-match"
# Override ai2-olmes' hard pin on fsspec==2023.5.0 (it's a self-described hack in olmes
# and works fine with newer versions). Needed for huggingface_hub's maxdepth support.
override-dependencies = [
    "fsspec>=2024.2.0,<=2025.3.0",
    # Disable pytrec-eval (won't build); pytrec-eval-terrier is a drop-in replacement
    "pytrec-eval ; sys_platform == 'never'",
]