[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "emo-vllm-plugin"
version = "0.1.0"
description = "vLLM plugin registering EmoNoQKNormPrenormSharedForCausalLM."
requires-python = ">=3.10"
dependencies = []

[project.entry-points."vllm.general_plugins"]
emo_noqknorm_prenorm_shared = "emo_noqknorm_prenorm_plugin:register"

[tool.setuptools]
py-modules = ["emo_noqknorm_prenorm_plugin"]
